# public/openapi.yaml
@@ -41,7 +41,7 @@ paths:
               required:
                 - title
                 - content
-                - category_id
+                - category
               properties:
                 title:
                   type: string
@@ -49,7 +49,7 @@ paths:
                   type: string
                 content:
                   type: string
-                category_id:
+                category:
                   type: string
                 image_url:
                   type: string
